More doc + feedbacks about Windows progress